--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ setup-hooks =
 
 [entry_points]
 console_scripts =
+    tacker-manage = tacker.manager:empty
     tacker-db-manage = tacker.db.migration.cli:main
     tacker-server = tacker.cmd.server:main
     tacker-rootwrap = oslo.rootwrap.cmd:main
